# ocsf-pydantic

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/extensions/windows/objects/: registry_key.py  registry_value.py  windows_resource.py  windows_service.py
src/ocsf/: __init__.py
src/ocsf/events/: base.py
src/ocsf/events/application/: api.py  application.py  application_lifecycle.py  datastore.py  file_hosting.py  scan.py  web_resource_access.py  web_resources.py
src/ocsf/events/discovery/: __init__.py  config_state.py  device_config_state_change.py  discovery.py  file_query.py  folder_query.py  group_query.py  inventory_info.py  job_query.py  kernel_object_query.py  module_query.py  network_connection_query.py  networks_query.py  patch_state.py  peripheral_device_query.py  process_query.py  service_query.py  session_query.py  software_inventory_info.py  user_inventory.py  user_query.py
src/ocsf/events/findings/: __init__.py  compliance.py  finding.py  (+4 more)
src/ocsf/objects/: _dns.py  _entity.py  _resource.py  account.py  actor.py  affected_code.py  affected_package.py  agent.py  analytic.py  api.py  attack.py  auth_factor.py  authorization.py  autonomous_system.py  certificate.py  cis_benchmark.py  cis_benchmark_result.py  cis_control.py  cis_csc.py  cloud.py  compliance.py  container.py  cve.py  cvss.py  cwe.py  d3fend.py  d3fend_tactic.py  d3fend_technique.py  data_classification.py  data_security.py  database.py  databucket.py  dce_rpc.py  device.py  device_hw_info.py  digital_signature.py  display.py  dns_answer.py  dns_query.py  domain_contact.py  (+74 more)
(+43 files in other folders)
