[project]
name = "ocsf-pydantic"
version = "0.0.6"
authors = [
  { name="Crowdalert, Inc", email="hello@crowdalert.com" },
]
description = "Pydantic models for OCSF"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT License"}

[project.urls]
Homepage = "https://github.com/crowdalert/ocsf-pydantic"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
